JumpScript/tests/baselines/reference/letDeclarations-scopes-duplicates6.errors.txt
tests/cases/compiler/file1.jump(1,5): error TS2451: Cannot redeclare block-scoped variable 'var1'.
tests/cases/compiler/file2.jump(1,5): error TS2451: Cannot redeclare block-scoped variable 'var1'.


==== tests/cases/compiler/file1.jump (1 errors) ====
    var var1 = 0;
        ~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var1'.
    
==== tests/cases/compiler/file2.jump (1 errors) ====
    let var1 = 0;
        ~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var1'.